# zCyptoBot

./: .codeqlignore  .gitignore  AdminManual.Md  CHANGELOG.md  CHANGELOGS.Md  CI_SECRETS.md  CODEOWNERS.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_PACK.md  GodsModeManual.Md  LICENSE.md  README.md  SECURITY.md  UserManual.Md  docker-compose.yml  osv-scanner.toml  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  zeaz_super_gen.sh
v1/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
v1/app/: config.py  main.py
v1/app/ai/: inference.py  trainer.py
v1/app/aiops/: __init__.py  ab.py  adwin.py  agent_orchestrator.py  autoscale.py  bandit.py  bandit_hb.py  bandit_hierarchical.py  bandit_nl.py  bandit_ts.py  bandit_ts_ns.py  bayesian_rca.py  canary.py  changepoint.py  coordination.py  cost_model.py  counterfactual.py  detector.py  diagnoser.py  dreamer.py  drift.py  enterprise_pipeline.py  evaluator.py  executor.py  features.py  features_auto.py  features_ctx.py  knowledge.py  negotiation.py  online_learning.py  orchestrator.py  orchestrator_v11.py  orchestrator_v2.py  patcher.py  (+19 more)
v1/docs/: CODEX_PROMPTS.md  IMAGE_REGENERATION.md  MERGED_BLUEPRINT.md  V4_INSTITUTIONAL_STACK.md  V5_V7_UPGRADE.md
v1/tests/: test_aiops_v11.py  test_aiops_v12_market_governance.py  test_aiops_v3.py  test_aiops_v6_v7_nonstationary.py  test_enterprise_growth_upgrade.py  test_institutional_upgrade.py  test_orchestrator.py  test_pipeline.py  test_v2_core.py  test_v4_stack.py  test_v5_v6_v7_upgrade.py
v1/zeaz-quant/: Dockerfile  requirements.txt
(+2481 files in other folders)
