[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zcyptobot"
version = "0.1.0"
description = "AI quant trading system template implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "httpx>=0.27", "aiokafka>=0.10", "websockets>=12.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
